<?xml version="1.0"?>
<package format="2">
  <name>movai_tugbot_ign_sim_ce</name>
  <version>0.0.1</version>
  <description>Metadata baseline for Tugbot Ignition simulator for CE</description>
  <maintainer email="mithun@mov.ai">Mithun Kinarullathil</maintainer>
  <author email="filipe.almeida@mov.ai">Filipe Almeida</author>
  <url>https://github.com/MOV-AI/movai_ign_sim_ce_pkgs</url>
  <license>Mov.AI License version 1.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>movai_ign_sim_ce</exec_depend>

  <export>
    <build_version>0</build_version>
  </export>
</package>
